test/official_tests/string/unterminated.lox
// error: {"line":2,"message":"Unterminated string literal","type":"LexingError"}
"this string has no close quote